data/derived/sp14/progs/unify/prog2259.ml.out
Characters 77-121:
  else (helperDigits num/10, (num mod 10)::newList);;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int list
